# tiny-llm

./: .gitignore  README.md  chapter2.ipynb  chapter3.ipynb  hello.py  pyproject.toml
notebooks/: appendix-A.ipynb  chapter3.ipynb  chapter4.ipynb  chapter5.ipynb  chapter6.ipynb  chapter7.ipynb
tiny_llm/: classifier.py  config.py  data_loader.py  feed_forward.py  gpt_model.py  layer_norm.py  multi_head_attention.py  transormer_block.py  utils.py
