[project]
name = "tiny-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>2.0.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.0",
    "tensorflow>=2.15.0",
    "tqdm>=4.66",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.9",
]
